[package]
name = "hero-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_codegen = "0.4.11"
serde = "1.0.148"
serde_json = "1.0.89"
serde_derive = "1.0.148"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]